fix(delete modal): text wrap

--- a/src/features/Modals/DeleteModal/DeleteModal.module.scss
+++ b/src/features/Modals/DeleteModal/DeleteModal.module.scss
@@ -10,6 +10,12 @@
 
   .name {
     font-weight: 600;
+    display: inline-block;
+    max-width: 100px;
+    white-space: nowrap;
+    overflow: hidden !important;
+    text-overflow: ellipsis;
+    margin-bottom: -7px;
   }
 
   .buttons {
